src/objects/CPI_LOOKUPS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Con Quality - Cross Reference values for Case Product Information object</description>
    <fields>
        <fullName>Batch_Warehouse_Code__c</fullName>
        <description>Cons Quality. The Warehouse &apos;code&apos; taken from the naming convention of the Fill Batch Number entered on the CPI screen</description>
        <label>Batch Warehouse Code</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Cons Quality: Category to classify the type of Lookup</description>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database_Source__c</fullName>
        <description>Add the Database Source the data will pull from</description>
        <label>Database Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site_Description__c</fullName>
        <description>Cons Quality: Description of the Manufacturing Site the Fill Batch Number was produced in.</description>
        <label>Manufacturing Site Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11i_Org_Code__c</fullName>
        <description>Cons Quality: The 11i Code to be used to find the correct Batch Number in 11i</description>
        <label>11i Org Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Case Product Info Lookups</label>
</CustomObject>